--- a/grunt-app/bower.json
+++ b/grunt-app/bower.json
@@ -7,8 +7,6 @@
     "restangular": "*",
     "ngCordova": "^0.1.26-alpha",
     "jquery": "^2.2.3",
-    "font-awesome": "fontawesome#^4.6.3",
-    "ng-material-floating-button": "ng-mfb#^0.6.2",
-    "Swiper": "swiper#^3.3.1"
+    "font-awesome": "fontawesome#^4.6.3"
   }
 }
