--- a/grunt-app/bower.json
+++ b/grunt-app/bower.json
@@ -7,7 +7,8 @@
     "restangular": "*",
     "ngCordova": "^0.1.26-alpha",
     "jquery": "^2.2.3",
-    "font-awesome": "fontawesome#^4.6.3"
+    "font-awesome": "fontawesome#^4.6.3",
+    "angularAudioRecorder": "^1.4.1"
   },
   "devDependencies": {
     "ngCordova-IMEI": "git://github.com/konstantinkrassmann/ngCordova-IMEI"
