--- a/grunt-app/bower.json
+++ b/grunt-app/bower.json
@@ -10,7 +10,8 @@
     "angularAudioRecorder": "^1.4.1",
     "ngstorage": "^0.3.11",
     "animate.css": "^3.5.2",
-    "ionic": "driftyco/ionic-bower#master"
+    "ionic": "driftyco/ionic-bower#master",
+    "PACE": "pace#^1.0.2"
   },
   "devDependencies": {
     "ngCordova-IMEI": "git://github.com/konstantinkrassmann/ngCordova-IMEI"
